# Assistant-AI

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: f577bcf94ed8_add_events_table.py
app/: bot.py  config.py  main.py
app/api/: calendar.py  tasks.py
app/bot_handlers/: google_connect.py  settings.py  start.py  tasks.py  voice.py
app/db/: session.py
app/db/repositories/: task_repo.py  user_repo.py
app/models/: __init__.py  event.py  task.py  user.py
app/schemas/: task.py  user.py
app/services/: calendar.py  google_auth.py  langchain_tools.py  reminder_scheduler.py  sync_google_calendar.py  transcription.py
app/utils/: __init__.py  logger.py  task_parser.py
